--- a/client/app.html
+++ b/client/app.html
@@ -17,6 +17,8 @@
 	<script src="/libs/angular-scroll-glue/src/scrollglue.js"></script>
 	<script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script>
 	<script src="https://code.responsivevoice.org/responsivevoice.js"></script>
+	<script src="/libs/angular-cookies/angular-cookies.min.js"></script>
+
 
 	<script src="app.js"></script>
 
